[package]
name = "ayasha"
version = "0.1.0"
authors = ["Michel <michel.bonenfant.jr@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
libsqlite3-sys = { version = "*", features = ["bundled"] }
diesel = { version = "*", features = ["sqlite","chrono"] }
diesel-derive-enum = { version = "*", features = ["sqlite"] }
diesel_migrations = "*"
dotenv = "*"
chrono = { version = "*", features = ["serde"] }
log = "*"
syslog = "*"
serial = "*"
azure_notificationhub_sender = { git = "https://github.com/Bodaway/azure_notificationhub_sender.git"}